Removed border on graph

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
         background-repeat: repeat-x;
         background-position: center;
         margin:30px 10%;
-        width:828px;
+        width:820px;
         font-family:sans-serif;
-
       }
       header, footer, #værvarsel {
-      background-color:white;
+        background-color:white;
       }
       header h1{
         color: #6F8F9D;
@@ -30,6 +29,10 @@
         background-position: center;
         background-repeat: no-repeat;
         background-image: url('sun.gif');
+        margin:-4px;
+      }
+      #værvarsel {
+        overflow:hidden;
       }
       menu {
         width:100%;
