added https on yr-links

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         var place;
         place = clicked.attributes['sted'].value;
         _html = " \
-          <a href='http://www.yr.no/sted/"+place+"langtidsvarsel.html'> \
-            <img src='http://www.yr.no/sted/"+place+"avansert_meteogram.png'> \
+          <a href='https://www.yr.no/sted/"+place+"langtidsvarsel.html'> \
+            <img src='https://www.yr.no/sted/"+place+"avansert_meteogram.png'> \
           </a> \
           ";
         document.getElementById("graf").innerHTML = _html;
@@ -118,7 +118,7 @@
       <h1>HOME PAGE</h1>
     </header>
     <section id="værvarsel">
-      <menu baseurl="http://www.yr.no/place/">
+      <menu baseurl="https://www.yr.no/place/">
         <menuitem
           sted = "Norge/Hedmark/Ringsaker/Aspliafeltet/"
           onmouseover="changeGraph(this)"
@@ -141,10 +141,10 @@
           Alanya
         </menuitem>
       </menu>
-      <div id="graf"><img src="http://www.yr.no/sted/Norge/Oslo/Oslo/Røa/avansert_meteogram.png"</div>
+      <div id="graf"><img src="https://www.yr.no/sted/Norge/Oslo/Oslo/Røa/avansert_meteogram.png"</div>
     </section>
     <footer>
-      Created by the amazing team behind <a href="http://skjerpa.no">Skjerpa Web AS</a>
+      Created by the amazing team behind <a href="https://skjerpa.no">Skjerpa Web AS</a>
     </footer>
     <script>
     document.addEventListener("DOMContentLoaded", function() {
