--- a/index.html
+++ b/index.html
@@ -120,21 +120,19 @@
     <section id="værvarsel">
       <menu baseurl="https://www.yr.no/place/">
         <menuitem
-          stedsnavn = "Norge/Hedmark/Ringsaker/Aspliafeltet/"
-          sted = "1-2828410"
+          sted = "61.017,10.579"
           onmouseover="changeGraph(this)"
           onclick="changeGraph(this)"
           id="default"
           >
-          Aspelienga
+          K147
         </menuitem>
         <menuitem
-          stedsnavn = "Tyrkia/Provinsen%20Antalya/Alanya/Alanya"
-          sted="2-324190"
+          sted="2-2676176"
           onmouseover="changeGraph(this)"
           onclick="changeGraph(this)"
           >
-          Alanya
+          Sødertælje
         </menuitem>
       </menu>
       <div id="graf"></div>
